Edits and bring benchmark setup forward.

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -261,12 +261,13 @@ velocity $\mathbf{u}$ is zero:
 \end{equation}
 where $p_0$ is the reference hydrostatic pressure and $\rho_0$ is a reference density profile (which may vary with depth).
 The total pressure and density can then be decomposed into variations about their 
-reference values: $\rho = \rho_0 + \rho^\prime$, $p = p_0 + p^\prime$. 
+reference values: $\rho = \rho_0 + \rho^\prime$, $p = p_0 + p^\prime$,
+and the hydrostatic reference state (Equation~\eqref{eq:hydrostatic_stokes}) may be subtracted from Equation~\eqref{eq:stokes}.
 
-Formally, this gives rise to the following time dependent, coupled system with unknowns $\mathbf{u}(t)$ and $\mathbf{p}(t)$:
+This gives rise to the following time dependent, coupled system with unknowns $\mathbf{u}(t)$ and $\mathbf{p}(t)$:
 \begin{equation}
 \begin{aligned}
-\nabla \cdot \left( 2 \eta \varepsilon( \mathbf{u} ) \right) - \nabla p &= \rho \mathbf{g} \qquad &\text{in } &\Omega(t)\\
+\nabla \cdot \left( 2 \eta \varepsilon( \mathbf{u} ) \right) - \nabla p^\prime &= \rho^\prime \mathbf{g} \qquad &\text{in } &\Omega(t)\\
 \nabla \cdot \mathbf{u} &= 0  \qquad &\text{in } &\Omega(t)
 \end{aligned}
 \label{eq:final_system}
@@ -305,7 +306,7 @@ equation
 \label{sec:eigenvalue}
 
 In order to better understand the time evolution of the system in Equation~\eqref{eq:final_system}
-we will consider the eigenvalues of a simplified homogeneous system. By setting $\rho = \rho_0$, we obtain the system
+we will consider the eigenvalues of a simplified homogeneous system where we neglect variations in density ($\rho^\prime = 0$):
 \begin{equation}
 \begin{aligned}
 \nabla \cdot \left( 2 \eta \varepsilon( \mathbf{u} ) \right) - \nabla p^\prime &= 0 \\
@@ -507,8 +508,7 @@ Reynold's transport theorem to find
 The volume integral is the same as that of the unstabilized problem, but now we obtained an additional surface integral.
 It has the form of a velocity-dependent surface stress pushing down on the 
 domain, and can be thought of as an artificial viscous damping of the surface.
-Since the term depends on the velocity, it 
-enters the Stokes system matrix as a stabilization term.  
+Since the term depends on the velocity, it enters the Stokes system matrix as a stabilization term.  
 Empirically, it has been found to be successful at damping instabilities \citep{kaus2010stabilization, quinquis2011role, duretz2011discretization}.
 
 The surface integral in Equation~\eqref{eq:kmm} is almost the same as that on the right hand side of 
@@ -517,7 +517,7 @@ By making two approximations we can connect it with the formalism developed in S
 First, when the current position of the surface is near to the reference surface (i.e., the slope is not too steep)
 then gravity is approximately in the direction of the surface normal: $\mathbf{g} \approx -g \mathbf{n}$.
 Furthermore, in Equation~\eqref{eq:weak_eigen} we considered response of the surface in a homogeneous system where there were no lateral density variations,
-while Equation~\eqref{eq:kmm_stabilization} uses the total density.
+while Equation~\eqref{eq:kmm} uses the total density.
 In most geodynamic simulations lateral density variations are small compared to the total density.
 For the purposes of stabilization we may approximate $\rho \approx \rho_0$.
 Inserting these two approximations, we find that the stabilization term may be written
@@ -615,7 +615,7 @@ included, and with $D$ and $\mathbf{y}_i$ the same as in Equation~\eqref{eq:eige
 \label{eq:stabilized_standard_eigenvalue}
 \end{equation}
 Several things are of note about this eigenvalue equation which help in solving it.
-The matrix $D$ is a scaled mass matrix which is only nonzero on the free surface,
+The matrix $D$ is a mass matrix which is only nonzero on the free surface,
 so it is mostly empty, and, in general, it is not necessary to explicitly form the
 matrix in order to apply it.
 Second, applying the inverse of $C_S$ amounts to solving the Stokes system, so any
@@ -626,16 +626,44 @@ of Equation~\eqref{eq:stabilized_standard_eigenvalue}.
 
 All of these factors mean that power iteration (see, e.g., \citet{golub2012matrix}),
 which finds the dominant eigenvalue/eigenvector pair, is an attractive option for finding $\tau_\mathrm{min}$.
-We have numerically tested the effect of quasi-implicit stabilization on a 2D Cartesian box with a free surface,
-using power iteration to find $\tau_S$.
-Figure~\ref{fig:perturb_spectrum} shows the results, where colored circles indicate the numerical
+We have tested the effectiveness of power iteration for finding the minimum relaxation time
+on a problem for which there is an analytical solution.
+We also use it to confirm Equation~\eqref{eq:spectrum_shift}.
+Following \citet{kramer2012implicit} we model the relaxation
+of surface topography in a two-dimensional Cartesian box with an isoviscous fluid.
+The setup is shown in Figure~\ref{fig:benchmark_setup}.
+The eigenvectors of this system are given by infinitesimal sinusoidal perturbations to the free surface
+\begin{equation}
+\zeta(x,0) = \zeta_0 \cos\left( k x \right),
+\label{eq:initial_topography}
+\end{equation}
+where $k = 2 \pi n / L$, and $n$ is a wavenumber which is an integer multiple of $1/2$.
+For an infinitesimal perturbation of this form, the relaxation time $\tau$ is given by
+\begin{equation}
+\tau = \frac{D k + \sinh(D k) \cosh(D k)}{ \sinh^2 (D k) } \frac{2 k \eta}{\rho g},
+\label{eq:analytic_relaxation_time}
+\end{equation}
+where $D$ is the layer depth, $\eta$ is the viscosity, $\rho$ is the density, and $g$ is the acceleration due to gravity.
+
+\begin{figure*}
+\includegraphics[width=0.9\textwidth]{figures/benchmark_setup.pdf}
+\caption{Setup for the power iteration test (Section~\ref{sec:numerical_determination}), as well as for the free surface relaxation benchmark (Section~\ref{sec:topography_relaxation}). A 2D box with an isoviscous fluid has sinusoidal initial topography, with amplitude $\zeta_0$ and wavenumber $n$. The box has depth $D$ and length $L$. For our tests $\rho = \eta = g = D = L = 1$, and $n=1/2$. For the power iteration test there is no initial perturbation ($\zeta_0 = 0.0$), and for the surface relaxation benchmark $\zeta_0 = 0.005$.}
+\label{fig:benchmark_setup}
+\end{figure*}
+The eigenvector with the minimum relaxation time for this system $\tau_{\min}$ corresponds to $n=1/2$ 
+(which, as expected, has the form of the fluid sloshing back and forth).
+Figure~\ref{fig:perturb_spectrum} shows the results of the power iteration, where colored circles indicate the numerical
 solution and black dots show the analytical solution using equation~\eqref{eq:spectrum_shift}.
+In most cases the iteration converges to better than $\sim10^{-5}$ relative accuaracy in about 20 iterations
+(and it can be fewer with a good initial guess).
+
 
 \begin{figure*}
 \includegraphics[width=0.9\textwidth]{figures/perturb_spectrum.pdf}
-\caption{The effect of quasi-implicit stabilization on the minimum relaxation time of a fluid in a 2D Cartesian box with a free surface (see Figure~\ref{fig:benchmark_setup}). The $x$-axis shows the timestep normalized by minimum relaxation time of the unstabilized problem $\tau_\mathrm{\min}$. The $y$-axis shows the stabilized relaxation time $\tau_S$, also normalized by $\tau_\mathrm{min}$. Colored circles show the relaxation times found by numerical solution of Equation~\eqref{eq:stabilized_standard_eigenvalue} with different values of the stabilization parameter $\theta$. Black dots show the relaxation times calculated using Equation~\eqref{eq:spectrum_shift}. The stabilized timescale is lengthened for larger timesteps and for larger values of $\theta$. For this test case, power iteration typically attains better than 1\% accuracy in 5-10 iterations.}
+\caption{The effect of quasi-implicit stabilization on the minimum relaxation time of a fluid in a 2D Cartesian box with a free surface (see Figure~\ref{fig:benchmark_setup}), as well as the result of power iteration to find the minimum relaxation time. The $x$-axis shows the timestep normalized by minimum relaxation time of the unstabilized problem $\tau_\mathrm{\min}$. The $y$-axis shows the stabilized relaxation time $\tau_S$, also normalized by $\tau_\mathrm{min}$. Colored circles show the relaxation times found by numerical solution of Equation~\eqref{eq:stabilized_standard_eigenvalue} with different values of the stabilization parameter $\theta$. Black dots show the relaxation times calculated using Equation~\eqref{eq:spectrum_shift}. The stabilized timescale is lengthened for larger timesteps and for larger values of $\theta$. For this test case, power iteration typically attains better than 1\% accuracy in 5-10 iterations.}
 \label{fig:perturb_spectrum}
 \end{figure*}
+
 
 \section{A novel time-integration scheme}
 \label{sec:newscheme}
@@ -670,7 +698,7 @@ We can approximate $\mathbf{u}(t)$ as
 \mathbf{u}(t) = \mathbf{u}(t^n) e^{-(t-t^n)/\tau^*},
 \label{eq:velocity_decay}
 \end{equation}
-where $\tau^*$ is some as-yet undetermined positive constant.
+where $\tau^*$ is some as-yet undetermined positive constant which we will refer to as the ``stabilization timescale''.
 This form of $\mathbf{u}$ automatically decays in time, and as we shall see, has much better 
 stability properties than forward Euler integration.
 Using Equation~\eqref{eq:velocity_decay} in Equation~\eqref{eq:time_integration} and integrating, we find
@@ -700,7 +728,7 @@ This will decay exponentially with relaxation time $\tau_i$, or
 \end{equation}
 Applying the nonstandard finite difference scheme, we find
 \begin{equation}
-a_i^{n} = a_i^{n+1} \left[ 1 - \frac{\tau^*}{\tau_i} \left(1-e^{-\Delta t/\tau^*} \right) \right].
+a_i^{n+1} = a_i^{n} \left[ 1 - \frac{\tau^*}{\tau_i} \left(1-e^{-\Delta t/\tau^*} \right) \right].
 \label{eq:recursion}
 \end{equation}
 In order for the scheme to be stable, the quantity in brackets must not blow up as it is repeatedly multiplied by itself, or 
@@ -755,7 +783,7 @@ The stability region is plotted in Figure~\ref{fig:stability_region}.
 
 \begin{figure*}
 \includegraphics[width=0.9\textwidth]{figures/stability_region.pdf}
-\caption{(a) Stability region for the nonstandard finite difference scheme (green). On the x-axis is the value of the stabilization time, in units of the minimum relaxation time $\tau_{\mathrm{min}}$.  On the y-axis is the value of the timestep, also in units of the minimum relaxation time. For $\tau^*\le 2 \tau_{\mathrm{min}}$ the nonstandard finite difference scheme is unconditionally stable.  (b) Stability region for the quasi-implicit scheme (green).  Again, the y axis is in units of the minumum relaxation time.  The x-axis shows the value of the stabilization parameter $\theta$. For $\theta = 1$ the quasi-implicit scheme is unconditionally stable. In both cases the stability region for the forward Euler scheme is also shown in blue.}
+\caption{(a) Stability region for the nonstandard finite difference scheme (green). On the x-axis is the value of the stabilization timescale, in units of the minimum relaxation time $\tau_{\mathrm{min}}$.  On the y-axis is the value of the timestep, also in units of the minimum relaxation time. For $\tau^*\le 2 \tau_{\mathrm{min}}$ the nonstandard finite difference scheme is unconditionally stable.  (b) Stability region for the quasi-implicit scheme (green).  Again, the y axis is in units of the minumum relaxation time.  The x-axis shows the value of the stabilization parameter $\theta$. For $\theta = 1$ the quasi-implicit scheme is unconditionally stable. In both cases the stability region for the forward Euler scheme is also shown in blue.}
 \label{fig:stability_region}
 \end{figure*}
 
@@ -938,40 +966,25 @@ Similar results were found by \citet{fullsack1995arbitrary}.
 \label{sec:topography_relaxation}
 
 We demonstrate the convergence of the nonstandard finite difference model by comparison 
-with an analytical solution. Following \citet{kramer2012implicit} we model the relaxation
+with an analytical solution. 
+As in Section~\ref{sec:numerical_determination} we consider the relaxation
 of sinusoidal surface topography in a two-dimensional Cartesian box with an isoviscous fluid.
 The setup is shown in Figure~\ref{fig:benchmark_setup}.
 
-The initial topography is given by
+For an initial topography given by Equation~\eqref{eq:initial_topography}, the relaxation time $\tau$
+is given by Equation~\eqref{eq:analytic_relaxation_time}, and the time evolution of the surface 
+topography is given by
 \begin{equation}
-\zeta(x,0) = \zeta_0 \cos\left( k x \right),
+  \zeta(x,t) = \zeta(x,0) e^{-t/\tau}.
 \end{equation}
-where $k = 2 \pi / L$.
-
-The time evolution of this topography is then
-\begin{equation}
-\zeta(x, t) = \zeta(x,0) e^{-t/\tau},
-\end{equation}
-where the relaxation time $\tau$ is given by
-\begin{equation}
-\tau = \frac{D k + \sinh(D k) \cosh(D k)}{ \sinh^2 (D k) } \frac{2 k \eta}{\rho g},
-\end{equation}
-where $D$ is the layer depth, $\eta$ is the viscosity, $\rho$ is the density, and $g$ is the acceleration due to gravity.
-
 This solution is only valid for infinitesimal topography. However, for small
 initial topography $\zeta_0$ it seems to be sufficiently accurate to test convergence orders up 
 to quadratic \citep{kramer2012implicit, furuichi2015implicit}.
 We estimate the error $E$ by time-integrating the $L_2$ difference between the numerical and analytical
-solutions at the center point of the free surface:
+solutions at the center point of the free surface, over a time interval $T$ (which we choose to be $4\tau$):
 \begin{equation}
-E = \frac{1}{4\tau}\int_0^{4 \tau} \lVert \zeta_\mathrm{numeric}(L/2, t) - \zeta_\mathrm{analytic}(L/2, t) \rVert_2 \text{ d}t.
+E = \frac{1}{T}\int_0^{T} \lVert \zeta_\mathrm{numeric}(L/2, t) - \zeta_\mathrm{analytic}(L/2, t) \rVert_2 \text{ d}t.
 \end{equation}
-
-\begin{figure*}
-\includegraphics[width=0.9\textwidth]{figures/benchmark_setup.pdf}
-\caption{Setup for the free surface relaxation benchmark. A 2D box with an isoviscous fluid has sinusoidal initial topography, with amplitude $\zeta_0$. The box has depth $D$ and length $L$. For our tests $\rho = \eta = g = D = L = 1$, and $\zeta_0 = 0.005$.}
-\label{fig:benchmark_setup}
-\end{figure*}
 
 Figure~\ref{fig:timestep_convergence}a shows the convergence of the nonstandard finite difference scheme 
 with respect to timestep size. The scheme is first order in time, with improving accuracy as the value of $\tau^*$ approaches
@@ -984,7 +997,7 @@ Figure~\ref{fig:timestep_convergence}b shows the convergence of the quasi-implic
 When $\theta=0$, it corresponds to the unstabilized forward Euler scheme, and is first order in time. 
 When $\theta=1$ it is also first order in time, but allows for a much larger timestep.  When $\theta=0.5$
 the quasi-implicit guess for the body force is good enough that it actually seems to achieve the second-order 
-convergence of a trapezoidal scheme, though it is not clear whether this extends to more complicated models.
+convergence of a trapezoidal scheme, though it has not been shown that this extends to more complicated models.
 
 Figure~\ref{fig:tau_sensitivity} shows in more detail the effects of the choice of $\tau^*$. In a narrow region 
 close to the true value of $\tau_\mathrm{min}$ the error becomes very small, but in a broader region nearby 
@@ -995,7 +1008,7 @@ those due to rotational or tidal deformation.
 
 \begin{figure*}
 \includegraphics[width=0.95\textwidth]{figures/timestep_convergence.pdf}
-\caption{Convergence tests for the benchmark shown in Figure~\ref{fig:benchmark_setup}. (a) Convergence test with timestep size for the nonstandard finite difference scheme. Comparison with the slope-one line confirms that it is first-order in time. In the case that the stabilization relaxation time $\tau^*$ is equal to the analytic relaxation time the error becomes very small, as the time integration scheme becomes exact \citep{mickens2002nonstandard}. (b) Convergence test with timestep size for the quasi-implicit scheme. For $\theta = 1$ and $\theta = 0$ the scheme is first-order accurate (though the latter is just an unstabilized forward-Euler scheme). For $\theta=0.5$ the scheme appears second order accurate on this benchmark.}
+\caption{Convergence tests for the benchmark shown in Figure~\ref{fig:benchmark_setup}. (a) Convergence test with timestep size for the nonstandard finite difference scheme. Comparison with the slope-one line confirms that it is first-order in time. In the case that the stabilization timescale $\tau^*$ is equal to the analytic relaxation time the error becomes very small, as the time integration scheme becomes exact \citep{mickens2002nonstandard}. (b) Convergence test with timestep size for the quasi-implicit scheme. For $\theta = 1$ and $\theta = 0$ the scheme is first-order accurate (though the latter is just an unstabilized forward-Euler scheme). For $\theta=0.5$ the scheme appears second order accurate on this benchmark.}
 \label{fig:timestep_convergence}
 \end{figure*}
 
